--- a/style.css
+++ b/style.css
@@ -1,295 +1,234 @@
-body{
-    margin: 0px;
-    padding: 0px;
-    background-image: url("images/city.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 20%;
-}
-body::-webkit-scrollbar{
-    width: 1rem;
-}
-body::-webkit-scrollbar-track{
-    background: rgb(0, 0, 0);
-    border: solid 0.1px grey;
-}
-body::-webkit-scrollbar-thumb{
-    background: rgba(38, 0, 255, 0.548);
-    border-radius: 500px;
-    border: solid 1px grey;
-}
-body::-webkit-scrollbar-thumb:hover {
-    background: rgba(38, 0, 255, 1);
-    transition: all 1s ease-in-out;
+/*#region Body*/
+*,*::before,*::after{
+    box-sizing: border-box;
 }
 :root{
     scroll-behavior: smooth;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    overflow-y: none;
+    overflow-x: none;
 }
-.Margin{
-    border: solid 2px black;
-    height: 92vh;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-.Margin section{
-    color:white;
-    height:10%;
-    padding: 7.5rem 10rem;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ;
-    align-self:center;
-    border: solid 2px black;
-    margin-right: 10rem;
-    box-shadow: 15px 15px rgba(0,0,0,0.3);
-    font-size: 50px;
-    transition: all 0.5s linear;
-    animation: Margins 0.5s linear;
-}
-@keyframes Margins{
-    from{padding: 0rem 0rem;}
-    to{padding: 7.5rem 10rem;}
-}
-.Margin section:hover{
-    padding: 10rem 12.5rem;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.75));
-    box-shadow: 10px 10px rgba(0,0,0,0.5);
-    transition: all 1s linear;
-}
-.start {
-    border: solid 2px black;
-    height: 50vh;
-    top: 0;
-    z-index: 0;
-    position: sticky;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.1),rgba(0, 0, 0, 0.2)) , url("images/city.jpg");
-}
-.navbar{
-    display:flex;
-    border: solid 2px black;
-    justify-content: flex-end;
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    padding: 20px;
-    margin-top: 10px;
-    background-image: linear-gradient(rgba(214, 104, 200, 0.1),rgba(214, 104, 200, 0.2)), url("images/Bg1.png");
-}
-.navbar a{
-    border: solid 2px black;
-    padding: 10px 10px;
-    margin-left: 20px;
-    border-radius: 25px;
-    background-image: linear-gradient(rgba(0,0,0,0.25),rgba(0,0,0,0.50));
-    color:white;
-    text-decoration: none;
-    box-shadow: 4px 4px rgba(0,0,0,0.3);
-}
-.navbar a:hover{
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.75));
-    box-shadow: 6px 6px rgba(0,0,0,0.5);
-    animation-timing-function: linear;
-    transition: all 0.2s ease-in;
-}
-.Logo{
-    margin-right: auto;
-    animation: move 1s ease-in;
-}
-.Logo2{
-    height:40px;
-    animation: rotates 5s infinite linear;
-}
-.first{
-    height: 33.33%;
-    background-color: rgba(182, 182, 182, 0.788);
-}
-.second{
-    height: 33.33%;
-    background-color: rgba(182, 182, 182, 0.788);
-}
-.third{
-    height: 33.34%;
-    background-color: rgba(182, 182, 182, 0.788);
-}
-footer{
-    height: 10vh;
+body{
+    margin:0px;
+    padding:0px;
     width: 100%;
-    border-top: solid 2px black;
-    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
-    display:flex;
-    justify-content: flex-end;
-    align-items: center;
+    height: 100%;
+    display:grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(57, 1fr);
+}
+body::-webkit-scrollbar{
+    border: solid black 1px;
+}
+body::-webkit-scrollbar-thumb{
+    background-color: black;
+    border-radius: 20px;
+    border: solid 2px rgba(255, 255, 255, 0.692);
+}
+body::-webkit-scrollbar-track{
+    background-image: linear-gradient(rgba(59, 56, 59, 0.6),rgba(107, 81, 109, 0.4));
+}
+a{
+    padding: 10px 50px;
+    margin: 5px;
+    text-decoration: none;
+    color: white;
+    outline: none;
+    
+}
+/*#region Headers*/
+nav{
+    top:0;
+    position: sticky;
+    text-align: right;
+    border-bottom: solid 2px black;
+    grid-column: 1 / 13;
+    grid-row:1/2;
+    padding:20px;
+    background-size: 100px 100%;
+    background-image:linear-gradient(rgba(190, 152, 194, 0.4),rgba(240,216,242,0.3)), url("images/Bg1.jpg");
+}
+nav a{
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.4));
+    border-radius: 20px;
+    box-shadow: 4px 4px rgba(0,0,0,0.6);
+    transition: all 0.1s linear;
+    outline: none;
+}
+nav a:hover, a::selection{
+    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6));
+    box-shadow: 2px 2px rgba(0,0,0,0.6);
+    transition: all 0.1s linear;
+}
+.progress-container{
+    position: relative;
+    top: 27%;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    height: 1em;
+    border-radius: 0.5em;
+    background-color: black;
+}
+.progress{
+    position: absolute;
+    border-radius: 0.5em;
+    left: 0.25em;
+    top: 0.25em;
+    bottom: 0.25em;
+    width: 2rem;
+    min-width: 2rem;
+    max-width:calc(100% - 0.5em);
+    background-color: white;
+}
+header{
+    grid-column: 1 / 13;
+    grid-row:2/10;  
+    background: url("images/Bg3.jpg") repeat fixed 100%;
+    background-repeat: no-repeat;
+    background-size: auto;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    place-items: center;
+}
+header section{
+    padding: 70px;
+    grid-column: 5/11;
+    grid-row: 3 / 5;
+    font-size: 25px;
+    color: white;
+    text-align: center;
+    border-radius: 20px;
+    background-image: url("images/Bg2.jfif");
+    background-size: cover;
+}
+
+
+
+/*#region Main*/
+main{
+    grid-column: 1 / 13;
+    grid-row:10/56;
+    /* background-image: linear-gradient(rgba(233, 201, 201, 0.6),rgba(177, 140, 140, 0.5)); */
+    background: repeat fixed 100%;
+    background-image: linear-gradient(rgba(255, 255, 255, 0.6),rgba(0, 0, 0, 0.5)), url("images/Bg4.jpg"); 
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(22, 1fr);
+    font-size: 20px;
+}
+main section{
+    background-image: linear-gradient(rgba(255, 255, 255, 0.8),rgba(255, 255, 255, 0.6));
+    transition: all 0.5s linear;
+    box-shadow: 5px 10px rgba(0,0,0,0.4);
+    border-radius: 20px;
+    color:black;
+    display: grid;
+    place-items: center;
+    text-align: center;
+}
+/* main section:hover{
+    transition: all 0.5s linear;
+    box-shadow: 2px 5px rgba(0,0,0,0.8);
+    background-image: linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.8));
+} */
+iframe{
+    border-radius: 25px;
+}
+#first{
+    grid-column: 2 / 6;
+    grid-row: 2/5
+}
+#second{
+    grid-column: 5 / 9;
+    grid-row: 8/11
+}
+#third{
+    grid-column: 8 / 12;
+    grid-row: 14/17
+}
+#third iframe{
+    border-radius: 25px;
+}
+
+/*#region Contact Info*/
+footer{
+    grid-column: 1 / 13;
+    grid-row:56/58;
+    background-color: black;
+    font-size: 20;
+    padding: 20px;
+    padding-top: 50px;
+    font-size: 20px;
+    text-align: center;
 }
 footer a{
-    padding: 1rem 2rem;
-    font-size: 25px;
-    color: white; 
-    text-decoration: none;
+    padding-top: 50px;
+    padding: 10px;
+    margin: 80px;
 }
-footer img{
-    height: 50px;
-    width: 140px;
-    border-radius: 15px;
-    box-shadow: 5px 5px rgba(0,0,0,0.5);
+footer a:hover{
+    color: rgba(233, 61, 61, 0.5)
 }
-main{
-    height: 400vh;
-    width: 100%;
-    text-align: center;
-    background-image: linear-gradient(rgba(207, 204, 204, 0.1),rgba(92, 78, 78, 0.253)),url("images/image.jpg");
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-}
-main div{
-    padding: 15rem;
-    width: 20%
-}
-.f1{
-    position: relative;
-    top: 200px;
-    left: 100px;
-    background-color: rgba(255,255,255,0.75);
-    box-shadow: 15px 20px rgba(255,255,255,0.5);
-    transition: all 0.2s ease-in-out;
-}
-.f1:hover{
-    transition: all 0.2s ease-in-out;
-    background-color: rgba(255,255,255,1);
-    box-shadow: 10px 10px rgba(255,255,255,0.75);
-}
-.f2{
-    position: relative;
-    top: 200px;
-    left: 500px;
-    background-color: rgba(255,255,255,0.75);
-    box-shadow: 15px 20px rgba(255,255,255,0.5);
-    transition: all 0.2s ease-in-out;
-}
-.f2:hover{
-    transition: all 0.2s ease-in-out;
-    background-color: rgba(255,255,255,1);
-    box-shadow: 10px 10px rgba(255,255,255,0.75);
-}
-.f3{
-    position: relative;
-    top: 200px;
-    left: 900px;
-    background-color: white;
-    background-color: rgba(255,255,255,0.75);
-    box-shadow: 15px 20px rgba(255,255,255,0.5);
-    transition: all 0.2s ease-in-out;
-}
-.f3:hover{
-    transition: all 0.2s ease-in-out;
-    background-color: rgba(255,255,255,1);
-    box-shadow: 10px 10px rgba(255,255,255,0.75);
-}
-@keyframes rotates {
-    from{transform: rotate(0deg) }
-    to{transform: rotate(360deg) }
-}
-.Logo:hover{
-    position: inline;
-    height: 40px;
-    width: 40px;
-}
-@media(max-width: 1000px){
-    @keyframes move {
-        from {margin:0px;}
-        to {margin-right: 60%;}
+@media only screen and (max-width: 900px) {
+    #first{
+        grid-column: 2 / 12;
+        grid-row: 2/5
     }
-    body{
-        background-size: 200% 20%;
+    #second{
+        grid-column: 2 / 12;
+        grid-row: 7/10
     }
-    .Margin section{
-        color:white;
-        height:10%;
-        padding: 2.5rem 2.5rem;
-        background-image: linear-gradient(rgba(0,0,0,0.25),rgba(0,0,0,0.5)) ;
-        align-self:center;
-        border: solid 2px black;
-        margin-right: 2.5rem;
-        box-shadow: 15px 15px rgba(0,0,0,0.3);
-        font-size: 50px;
-        animation: Margins 0.5s linear;
+    #third{
+        grid-column: 2 / 12;
+        grid-row: 12/15
     }
-    @keyframes Margins{
-        from{padding: 0rem 0rem;}
-        to{padding: 2.5rem 2.5rem;}
+    #third iframe{
+        border-radius: 25px;
     }
-    .Margin section:hover{
-        padding: 5rem 5rem;
-        background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.75));
-        box-shadow: 10px 10px rgba(0,0,0,0.5);
-        transition: all 0.5s linear;
-    }
-    .first{
-        height: 33.33%;
-        background-color: rgba(182, 182, 182, 0.788);
-    }
-    .second{
-        height: 33.33%;
-        background-color: rgba(182, 182, 182, 0.788);
-    }
-    .third{
-        height: 33.34%;
-        background-color: rgba(182, 182, 182, 0.788);
-    }
-    footer{
-        margin: 0px;
-        padding: 10px;
-        height: 10vh;
-        width: 100%;
-        border-top: solid 2px black;
-        background-image: linear-gradient(to right,rgba(0,0,0,0.1),rgba(0,0,0,0.4));
-        display:flex;
-        justify-content: flex-end;
-        align-items: center;
-    }
-    footer a{
-        padding: 1rem 2rem;
-        font-size: 25px;
-        color: white; 
-        text-decoration: none;
-    }
-    footer img{
-        height: 50px;
-        width: 140px;
-        border-radius: 15px;
-        box-shadow: 5px 5px rgba(0,0,0,0.5);
-    }
-    .myCanvas{
-        position: relative;
-        top:150px;
-        left: 200px;
+
+}
+@media only screen and (min-width: 601px) and (max-width: 900px){
+
+}
+@media only screen and (max-width: 600px){
+    header section{
+        grid-column: 2/12;
     }
     main{
-        height: 400vh;
-        width: 100%;
+        grid-row: 10/57
+    }
+    nav{
         text-align: center;
-        background-size: 100% 100%;
     }
-    main div{
-        border: solid 2px black;
-        padding: 10rem;
-        width: 20%
+    nav a{
+        margin: 10px;
+        padding: 10px;
     }
-    .f1{
-        position: relative;
-        top: 300px;
-        left: 25px;
-        background-color: white;
+    #first{
+        grid-column: 2 / 12;
+        grid-row: 2/4
     }
-    .f2{
-        position: relative;
-        top: 300px;
-        left: 200px;
-        background-color: white;
+    #second{
+        grid-column: 2 / 12;
+        grid-row: 7/9
     }
-    .f3{
-        position: relative;
-        top: 300px;
-        left: 375px;
-        background-color: white;
+    #third{
+        grid-column: 2 / 12;
+        grid-row: 12/14
+    }
+    #third iframe{
+        border-radius: 25px;
+    }
+    iframe{
+        width: 200px;
+        height: 300px;
+        border-radius: 25px;
+        overflow-x:hidden;
+    }
+    footer{
+        grid-row: 57/58;
+        font-size: 12.5px;
+        padding: 20px 0px;
     }
 }
