--- a/style.css
+++ b/style.css
@@ -1,77 +1,118 @@
 /*#region Body*/
-*,*::before,*::after{
-    box-sizing: border-box;
-}
 :root{
     scroll-behavior: smooth;
-    overflow-y: none;
-    overflow-x: none;
 }
 body{
-    margin:0px;
-    padding:0px;
-    width: 100%;
-    height: 100%;
-    display:grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(57, 1fr);
-}
-body::-webkit-scrollbar{
-    border: solid black 1px;
-}
-body::-webkit-scrollbar-thumb{
-    background-color: black;
-    border-radius: 20px;
-    border: solid 2px rgba(255, 255, 255, 0.692);
-}
-body::-webkit-scrollbar-track{
-    background-image: linear-gradient(rgba(59, 56, 59, 0.6),rgba(107, 81, 109, 0.4));
-}
-a{
-    padding: 10px 50px;
-    margin: 5px;
-    text-decoration: none;
+    margin: 0px;
+    height:500vh;
+    overflow-y: hidden;
+    overflow-x: hidden;
     color: white;
-    outline: none;
-    
 }
-/*#region Headers*/
-nav{
-    top:0;
-    position: sticky;
-    text-align: right;
-    border-bottom: solid 2px black;
-    grid-column: 1 / 13;
-    grid-row:1/2;
-    padding:20px;
-    background-size: 100px 100%;
-    background-image:linear-gradient(rgba(190, 152, 194, 0.4),rgba(240,216,242,0.3)), url("images/Bg1.jpg");
+/*#endregion Body*/
+/*#region name*/
+.Nav{
+    position: fixed;
+    top: 50%;
+    transform: translateY(-50%);
 }
-nav a{
-    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.4));
-    border-radius: 20px;
-    box-shadow: 4px 4px rgba(0,0,0,0.6);
-    transition: all 0.1s linear;
-    outline: none;
+input[type=radio]{
+    display: block;
+    margin-top: 50px;
+    margin-left: 10px;
+    border: 0px;
+    width: 300%;
+    height: 2em;
+} 
+main{
+    height: 100vh;
 }
-nav a:hover, a::selection{
-    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6));
-    box-shadow: 2px 2px rgba(0,0,0,0.6);
-    transition: all 0.1s linear;
+.effect {
+    opacity: 0;
+    transform: translateY(100px);
+    transition: transform 0.75s;
 }
-.progress-container{
+/* main div{
     position: relative;
-    top: 27%;
+    top: 30%;
+    left: 60%;
+    background-color: rgba(100, 92, 92, 0.938);
+    width: 30%;
+    height: 20%;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 40px;
+} */
+#one content{
+    position: relative;
+    font-size: 100px;
+    cursor: default;
+    top:25%;
+    left: 30%;
+    font-family: 'Abril Fatface', cursive;
+    font-weight: bold;
+    border-top: solid transparent 10px;
+    animation: introduction 1s ease-in-out;
+    transition: all 0.1s linear;
+}
+#one content:hover{
+    border-top: solid white 10px;
+    transition: all 0.1s linear;   
+}
+@keyframes introduction{
+    from{left: 110%;}
+    to{left: 30%;}
+}
+#one{
+    background: url("images/Bg3.jpg") repeat fixed 50%;
+    background-repeat: no-repeat;
+    background-size: auto;
+}
+/*#endregion name*/
+#two{
+    background: url("images/Bg4.jpg") repeat fixed 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 15%;
+}
+#two content{
+    position: relative;
+    left:50%;
+    font-size:75px;
+}
+iframe{
+    display: block;
+    width: 40%;
+    border-radius: 25px;
+    padding-top: 25px;
+}
+#three{
+    background: url("images/Bg6.jpg") repeat fixed 75%;
+    background-color: rgb(48, 48, 54);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+/*
+    background: url("images/Bg3.jpg") repeat fixed 100%;
+    background-repeat: no-repeat;
+    background-size: auto;
+*/
+/*#region Body*/
+/*#region Body*/
+/*#region Body*/
+.progress-container{
+    position: fixed;
+    left: 0px;
     margin: 0px;
     padding: 0px;
     width: 100%;
     height: 1em;
-    border-radius: 0.5em;
     background-color: black;
 }
 .progress{
     position: absolute;
-    border-radius: 0.5em;
     left: 0.25em;
     top: 0.25em;
     bottom: 0.25em;
@@ -80,155 +121,19 @@ nav a:hover, a::selection{
     max-width:calc(100% - 0.5em);
     background-color: white;
 }
-header{
-    grid-column: 1 / 13;
-    grid-row:2/10;  
-    background: url("images/Bg3.jpg") repeat fixed 100%;
-    background-repeat: no-repeat;
-    background-size: auto;
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    place-items: center;
-}
-header section{
-    padding: 70px;
-    grid-column: 5/11;
-    grid-row: 3 / 5;
-    font-size: 25px;
-    color: white;
-    text-align: center;
-    border-radius: 20px;
-    background-image: url("images/Bg2.jfif");
-    background-size: cover;
-}
-
-
-
-/*#region Main*/
-main{
-    grid-column: 1 / 13;
-    grid-row:10/56;
-    /* background-image: linear-gradient(rgba(233, 201, 201, 0.6),rgba(177, 140, 140, 0.5)); */
-    background: repeat fixed 100%;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.6),rgba(0, 0, 0, 0.5)), url("images/Bg4.jpg"); 
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(22, 1fr);
-    font-size: 20px;
-}
-main section{
-    background-image: linear-gradient(rgba(255, 255, 255, 0.8),rgba(255, 255, 255, 0.6));
-    transition: all 0.5s linear;
-    box-shadow: 5px 10px rgba(0,0,0,0.4);
-    border-radius: 20px;
-    color:black;
-    display: grid;
-    place-items: center;
-    text-align: center;
-}
-/* main section:hover{
-    transition: all 0.5s linear;
-    box-shadow: 2px 5px rgba(0,0,0,0.8);
-    background-image: linear-gradient(rgba(0, 0, 0, 1),rgba(0, 0, 0, 0.8));
-} */
-iframe{
-    border-radius: 25px;
-}
-#first{
-    grid-column: 2 / 6;
-    grid-row: 2/5
-}
-#second{
-    grid-column: 5 / 9;
-    grid-row: 8/11
-}
-#third{
-    grid-column: 8 / 12;
-    grid-row: 14/17
-}
-#third iframe{
-    border-radius: 25px;
-}
-
-/*#region Contact Info*/
-footer{
-    grid-column: 1 / 13;
-    grid-row:56/58;
-    background-color: black;
-    font-size: 20;
-    padding: 20px;
-    padding-top: 50px;
-    font-size: 20px;
-    text-align: center;
-}
-footer a{
-    padding-top: 50px;
-    padding: 10px;
-    margin: 80px;
-}
-footer a:hover{
-    color: rgba(233, 61, 61, 0.5)
-}
-@media only screen and (max-width: 900px) {
-    #first{
-        grid-column: 2 / 12;
-        grid-row: 2/5
-    }
-    #second{
-        grid-column: 2 / 12;
-        grid-row: 7/10
-    }
-    #third{
-        grid-column: 2 / 12;
-        grid-row: 12/15
-    }
-    #third iframe{
-        border-radius: 25px;
-    }
+@media screen and (min-width: 320px) and (max-width: 500px)
+{
 
 }
-@media only screen and (min-width: 601px) and (max-width: 900px){
+@media screen and (max-width: 600px){
 
 }
-@media only screen and (max-width: 600px){
-    header section{
-        grid-column: 2/12;
-    }
-    main{
-        grid-row: 10/57
-    }
-    nav{
-        text-align: center;
-    }
-    nav a{
-        margin: 10px;
-        padding: 10px;
-    }
-    #first{
-        grid-column: 2 / 12;
-        grid-row: 2/4
-    }
-    #second{
-        grid-column: 2 / 12;
-        grid-row: 7/9
-    }
-    #third{
-        grid-column: 2 / 12;
-        grid-row: 12/14
-    }
-    #third iframe{
-        border-radius: 25px;
-    }
-    iframe{
-        width: 200px;
-        height: 300px;
-        border-radius: 25px;
-        overflow-x:hidden;
-    }
-    footer{
-        grid-row: 57/58;
-        font-size: 12.5px;
-        padding: 20px 0px;
-    }
+@media screen and (max-width: 900px){
+
+}
+@media screen and (min-width: 900px) and (max-width: 1200px){
+
+}
+@media screen and (min-width: 1200px) and (max-width: 1600px){
+    
 }
